reverse merge with main and load Resourfce